--- a/_layouts/comments.html
+++ b/_layouts/comments.html
@@ -3,9 +3,8 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-  var disqus_shortname = '<USERNAME>'; // required: replace example with your forum shortname
-  var disqus_identifier = "{{ site.disqusid }}{{ page.url | replace:'index.html','' }}";
-
+  var disqus_shortname = '<minsuk000>'; // required: replace example with your forum shortname
+ 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function() {
     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
