--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
 {% endfor %}
 </h3>
 </header>
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 
       <main>
         {{ content }}
