--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,7 +16,8 @@ body {
 
 html {
   font-family: $root-font-family;
-  font-size: $root-font-size;
+  font-size: 50px; 
+  //$root-font-size;
   line-height: $root-line-height;
 
   @media (min-width: $large-breakpoint) {
