--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,7 +21,8 @@ html {
   line-height: $root-line-height;
 
   @media (min-width: $large-breakpoint) {
-    font-size: $large-font-size;
+    font-size: 50px; 
+    //$large-font-size;
   }
 }
 
