--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,19 +16,18 @@ body {
 
 html {
   font-family: $root-font-family;
-  font-size: 50px; 
-  //$root-font-size;
+  font-size: $root-font-size;
   line-height: $root-line-height;
 
   @media (min-width: $large-breakpoint) {
-    font-size: 50px; 
-    //$large-font-size;
+    font-size: $large-font-size;
   }
 }
 
 body {
   color: $body-color;
   background-color: $body-bg;
+  font-size: 50px;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
