--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,8 +16,7 @@ body {
 
 html {
   font-family: $root-font-family;
-  font-size: $large-font-size;
-  //$root-font-size;
+  font-size: $root-font-size;
   line-height: $root-line-height;
 
   @media (min-width: $large-breakpoint) {
