--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -12,13 +12,14 @@
   margin-top: 0;
   margin-bottom: 0;
   color: $gray-4;
+  font-size: 40px;
   a {
     color: inherit;
   }
 
   small {
     font-size: 75%;
-    font-weight: 800;
+    font-weight: 400;
     opacity: .5;
   }
 }
