--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,11 +3,13 @@
 // Styles for managing the structural hierarchy of the site.
 
 .container {
-  max-width: 38rem;
-  padding-left:  1.5rem;
-  padding-right: 1.5rem;
-  margin-left:  auto;
-  margin-right: auto;
+  max-width: 10rem;
+  padding-left:  1rem;
+  padding-right: 1rem;
+  margin-left: 1rem;  
+  //auto;
+  margin-right: 1rem;
+  //auto;
 }
 
 footer {
