--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,13 +3,11 @@
 // Styles for managing the structural hierarchy of the site.
 
 .container {
-  max-width: 10rem;
-  padding-left:  1rem;
-  padding-right: 1rem;
-  margin-left: 0.1rem;  
-  //auto;
-  margin-right: 0.1rem;
-  //auto;
+  max-width: 50rem;
+  padding-left:  0.5rem;
+  padding-right: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer {
